<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dateText"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/statusText"
        android:layout_gravity="left"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:layout_below="@+id/dateText"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="false"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:id="@+id/buttonSun"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:layout_column="0"
            android:layout_row="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:id="@+id/buttonMon"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_weight="1"
            android:layout_row="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:id="@+id/buttonTue"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:layout_column="0"
            android:layout_row="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:id="@+id/buttonWed"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:layout_row="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:id="@+id/buttonThu"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:layout_column="0"
            android:layout_row="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:id="@+id/buttonFri"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:layout_row="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:id="@+id/buttonSat"
            android:onClick="onClickDay"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:layout_column="0"
            android:layout_row="3" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/win_spree"
                android:id="@+id/winLabel"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0"
                android:id="@+id/winText"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/time"
                android:id="@+id/timeLabel"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0"
                android:id="@+id/timeText"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wrong_guesses"
                android:id="@+id/wrongLabel"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0"
                android:id="@+id/wrongText"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/score"
                android:id="@+id/scoreLabel"
                android:layout_row="4"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0"
                android:id="@+id/scoreText"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="right" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:id="@+id/skipButton"
                android:layout_row="10"
                android:layout_column="0"
                android:background="#FFCCCC"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:onClick="onClickSkip"/>
        </GridLayout>

    </GridLayout>

</RelativeLayout>
